--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -95,7 +95,7 @@ jobs:
       uses: atlassian/gajira-create@master
       with:
         project: DG
-        issuetype: Issue
+        issuetype: TO DO
         summary: |
           Build failed for the following commit: 
           
