--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -22,6 +22,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest pytest-cov
         pip install numpy
+        pip install mock
     
     - name: Checkout Own Repo to cloud
       uses: actions/checkout@v2
