--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -20,9 +20,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest pytest-cov
-        pip install numpy
-        pip install mock
+        pip install flake8 pytest pytest-cov numpy unittest
     
     - name: Checkout Own Repo to cloud
       uses: actions/checkout@v2
