--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest pytest-cov numpy unittest
+        pip install flake8 pytest pytest-cov numpy
     
     - name: Checkout Own Repo to cloud
       uses: actions/checkout@v2
