--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -88,25 +88,25 @@ jobs:
         JIRA_USER_EMAIL: ${{ secrets.JIRA_USER_EMAIL }}
         JIRA_API_TOKEN: ${{ secrets.JIRA_API_TOKEN }}
 
-    - name: Jira Task Creation (Failure)
-      if: failure()
-      id: create
-      uses: atlassian/gajira-create@master
-      with:
-        project: DG
-        issuetype: Task
-        summary: |
-          Build failed for ${{ github.repository }}
-        description: |
-          Build failed for the following commit: 
+    # - name: Jira Task Creation (Failure)
+    #   if: failure()
+    #   id: create
+    #   uses: atlassian/gajira-create@master
+    #   with:
+    #     project: DG
+    #     issuetype: Task
+    #     summary: |
+    #       Build failed for ${{ github.repository }}
+    #     description: |
+    #       Build failed for the following commit: 
           
-          ${{ github.event.commits[0].message }}
+    #       ${{ github.event.commits[0].message }}
 
-          Please check it out :(
+    #       Please check it out :(
 
-    - name: Log Created Issue for Jira Task Creation
-      if: failure()
-      run: echo "Issue ${{ steps.create.outputs.issue }} was created"
+    # - name: Log Created Issue for Jira Task Creation
+    #   if: failure()
+    #   run: echo "Issue ${{ steps.create.outputs.issue }} was created"
 
   CD:  
     needs: [CI]
