--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -72,6 +72,26 @@ jobs:
 
           Repository: ${{ github.repository }}
           See changes: https://github.com/${{ github.repository }}/commit/${{github.sha}}
+
+    - name: Send Discord Message 
+      uses: appleboy/discord-action@master
+      with:
+        webhook_id: ${{ secrets.WEBHOOK_ID }}
+        webhook_token: ${{ secrets.WEBHOOK_TOKEN }}
+        color: "#00ff00"
+        username: "GitHub DevOps Bot"
+        message: "A Successful Build has been completed!\n\nSee changes: https://github.com/${{ github.repository }}/commit/${{github.sha}}"
+
+    - name: Send Discord Message (Failure)
+      if: failure()
+      uses: appleboy/discord-action@master
+      with:
+        webhook_id: ${{ secrets.WEBHOOK_ID }}
+        webhook_token: ${{ secrets.WEBHOOK_TOKEN }}
+        color: "#ff0000"
+        username: "GitHub DevOps Bot"
+        message: "A Unsuccessful Build has been completed!\n\nSee changes: https://github.com/${{ github.repository }}/commit/${{github.sha}}"
+    
     
     - name: Publish Unit Test Results
       uses: EnricoMi/publish-unit-test-result-action@v1.24
@@ -115,3 +135,52 @@ jobs:
 
       - name: Checkout Repository Code
         uses: actions/checkout@v2
+
+      - name: Setup Python 3.10 Test
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.10'
+          
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install flake8 pytest pytest-cov numpy
+      
+      - name: Checkout Own Repo to cloud
+        uses: actions/checkout@v2
+
+      - name: Checkout private repo remotely
+        uses: actions/checkout@v2
+        with:
+          repository: s10196161/Devscantseethis
+          path: tests
+          token: ${{ secrets.QA_REMOTE }}
+
+      - name: Linter Check with Flake8
+        run: |
+          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics  
+        
+      - name: Begin Pytest
+        run: |
+          ls
+          mv ./tests/*.* ./
+          pytest --cov -v --junitxml=report.xml
+
+      - name: Send mail
+        uses: dawidd6/action-send-mail@v3
+        with:
+          # Required mail server address:
+          server_address: smtp.gmail.com
+          # Required mail server port:
+          server_port: 465
+          # Optional (recommended): mail server username:
+          username: ${{secrets.MAIL_USERNAME}}
+          # Optional (recommended) mail server password:
+          password: ${{secrets.MAIL_PASSWORD}}
+          # Required mail subject:
+          subject: New GitHub Release - Simp City
+          # Required recipients' addresses:
+          to: regimelt@hotmail.com #ict.devops.consultants@gmail.com
+          # Required sender full name (address can be skipped):
+          from: Linus Tay # <user@example.com>
