--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -167,7 +167,7 @@ jobs:
           mv ./tests/*.* ./
           pytest --cov -v --junitxml=report.xml
 
-      - name: Send mail
+      - name: Send Email to Stakeholder
         uses: dawidd6/action-send-mail@v3
         with:
           # Required mail server address:
